Jump: Pull issue-jump into it's own component
And use an input to allow user-edits.

I'm not sure what the best way is to get the 'push' function for
Jump.handleSubmit, but what I have here seems to work.

--- a/webapp/src/Home.css
+++ b/webapp/src/Home.css
@@ -3,14 +3,6 @@
   padding-right: 1em;
 }
 
-.Home-search div {
-  width: 100%;
-}
-
-.Home-search p {
-  text-align: center;
-}
-
 .Home-logo {
   height: 2em;
   vertical-align: middle;
